objects/DigitSecFinding__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DigitSecResult__c</fullName>
        <label>DigitSecResult</label>
        <referenceTo>copado__Result__c</referenceTo>
        <relationshipLabel>DigitSecFindings</relationshipLabel>
        <relationshipName>DigitSecFindings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exploit__c</fullName>
        <label>Exploit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remediation__c</fullName>
        <label>Remediation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Trace__c</fullName>
        <label>Vulnerability_Trace</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>DigitSecFinding</label>
    <nameField>
        <label>DigitSecFinding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DigitSecFindings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>